--- a/view/index.html
+++ b/view/index.html
@@ -14,7 +14,7 @@
   <div class="js-nav nav"></div>
   
   <div class="create-form form-car"> 
-    <form id='form-car' action="http://localhost:1234/api/v1/cars" method="POST">
+    <form action="http://localhost:1234/api/v1/cars" method="POST">
       <h2 class="create-title">create car</h2>
       <label for="name">Name:</label>
       <input type="text" name="name" id="name" value="" />
