--- a/view/sass/helppers/_general.scss
+++ b/view/sass/helppers/_general.scss
@@ -23,7 +23,8 @@ ul {
 
 .btn-add, .btn-inventory {
   padding: 10px;
-  margin: 5px;
+  margin: 5px 25px;
+  font-size: 1.5rem;
 }
 
 .inventory-brands {
